--- a/Flask_Web_App/templates/gantt.html
+++ b/Flask_Web_App/templates/gantt.html
@@ -1,4 +1,4 @@
-{% extends "index.html" %}
+{% extends "base.html" %}
 {% block content %}
 <div class="container mt-4">
     <h2 class="mb-4" style="color: #FF8200; font-weight: bold; letter-spacing: 1px;">Gantt Chart</h2>
