Add calendar export option

--- a/Flask_Web_App/templates/calendar.html
+++ b/Flask_Web_App/templates/calendar.html
@@ -2,6 +2,7 @@
 {% block content %}
 <div class="container my-4">
     <h1 class="mb-4">Project Calendar</h1>
+    <a href="/calendar_export_ics" class="btn btn-outline-info mb-3">Download for Outlook (.ics)</a>
     <div id="calendar"></div>
 </div>
 {% endblock %}
